# openai-vectorstore-mcp-app

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.codex/: config.toml
apps/openai_files_vector_store/: README.md
apps/openai_files_vector_store/backend/: http_main.py  logging.py  openai_gateway.py  schemas.py  server.py
apps/openai_files_vector_store/ui/: README.md  mcp-app.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.host.config.ts
apps/openai_files_vector_store/ui/dev-host/: index.html  index.tsx  mcpHost.ts  sandbox.html  sandbox.ts  server.ts  styles.css
apps/openai_files_vector_store/ui/src/: App.tsx  bridge.ts  mockBridge.ts  styles.css  theme.ts  types.ts
apps/openai_vectorstore_mcp_app/backend/: __init__.py  auth.py  chat_metadata.py  chat_store.py  chat_usage.py  file_library_service.py  http_main.py  main.py  models.py  server.py  settings.py  web_auth.py
apps/openai_vectorstore_mcp_app/ui/: package-lock.json  package.json  vite.config.ts
apps/openai_vectorstore_mcp_app/ui/src/: App.tsx  ChatPane.tsx  api.ts  main.tsx  styles.css  types.ts
backend/: __init__.py  bootstrap.py  chat_store.py  chatkit_server.py  clerk.py  db.py  fastmcp_dev.py  file_library_gateway.py  file_library_service.py  http_main.py  logging.py  main.py  mcp_app.py  models.py  schemas.py  session_tokens.py  settings.py  web_app.py
tests/integration/: test_openai_files_vector_store.py  test_openai_vectorstore_mcp_app.py
ui/: README.md  index.html  vite.config.ts
ui/src/: App.tsx  ChatPane.tsx  api.ts  main.tsx  styles.css  types.ts
